Funziona come dovrebbe Il codice fa schifo, non solo quello che ho scritto io